# parquet-parser

./: CMakeLists.txt  README.md
include/: owning_byte_array.hpp  parquet_buffer.hpp  parquet_parser.hpp
src/: parquet_buffer.cpp  parquet_parser.cpp
test/: CMakeLists.txt  ut_helper.cmake
test/parquet_buffer/: parquet_buffer_tests.cpp
